# ml-lambda-deployment

./: .gitignore  CONTRIBUTING.md  README.es.md  README.md  pyproject.toml
artifacts/: .gitkeep
docs/: ARCHITECTURE.md  CONCEPTS.md
legacy/: README.md  deploy.sh  lambda_function.py  train_model.py
scripts/: export_requirements.py  lint.py  train.py  verify_serialization.py  verify_training.py
src/ml_lambda/: __init__.py  config.py  lambda_function.py
src/ml_lambda/data/: __init__.py  processor.py
src/ml_lambda/deploy/: __init__.py  deployer.py  packager.py
src/ml_lambda/inference/: __init__.py  handler.py  predictor.py  validator.py
src/ml_lambda/model/: __init__.py  serializer.py
src/ml_lambda/training/: __init__.py  evaluator.py  trainer.py
src/ml_lambda/utils/: __init__.py  exceptions.py  logging.py
tests/: __init__.py  conftest.py
tests/property/: __init__.py  test_data_properties.py  test_logging_properties.py  test_serialization_roundtrip.py  test_training_properties.py  test_validator_properties.py
tests/unit/: test_handler.py  test_logging.py  test_processor.py  test_serializer.py  test_trainer.py  test_validator.py
